--- a/Angular/src/app/components/horario/horario/horario.component.html
+++ b/Angular/src/app/components/horario/horario/horario.component.html
@@ -9,6 +9,11 @@
       Ver clases de esta semana
     </button>
   </div>
+  <div>
+    <button class="btn btn-primary btn-lg" (click)="verHoy()">
+      Ver clases de hoy
+    </button>
+  </div>
 
   <!-- Select Curso -->
   <div style="min-width: 200px; flex: 1 1 200px;">
